--- a/docs/_data/translations.yml
+++ b/docs/_data/translations.yml
@@ -1,6 +1,7 @@
 translation_items:
   - title: home
     fr: accueil
+    en: home
   - title: No events
     fr: Aucun événement à afficher
     en: No events to display
