Update General configuration “translations”

--- a/docs/_data/translations.yml
+++ b/docs/_data/translations.yml
@@ -14,3 +14,6 @@ translation_items:
   - title: Your timezone is
     fr: Votre fuseau horaire est
     en: Your timezone is
+  - title: Scroll down
+    fr: Défilez vers le bas
+    en: Scroll down
