Update General configuration “translations”

--- a/docs/_data/translations.yml
+++ b/docs/_data/translations.yml
@@ -17,3 +17,6 @@ translation_items:
   - title: Scroll down
     fr: Défilez vers le bas
     en: Scroll down
+  - title: All Projects
+    en: All Projects
+    fr: Tous les projets
