Update General configuration “translations”

--- a/docs/_data/translations.yml
+++ b/docs/_data/translations.yml
@@ -20,3 +20,6 @@ translation_items:
   - title: All Projects
     en: All Projects
     fr: Tous les projets
+  - title: Brand Strategy
+    en: Brand Strategy
+    fr: Stratégie de marque
